--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 body{
   background-color: #d9dbd4;
 }
+header{
+  width: 100%;
+  z-index: -1;
+  position: fixed;
+  top: 0px;
+  background-color: #10ac84;
+  height: 70px;
+}
 .col-lg-8, .col-lg-4{
   height: 100%;
 }
@@ -18,6 +26,7 @@ body{
 }
 .symbols i{
   margin: 0 15px;
+  cursor: pointer;
 }
 
 
@@ -45,6 +54,9 @@ body{
   overflow-y: scroll;
   height: 500px;
 }
+.container_Chat .privatesChat:last-child{
+  border:none;
+}
 .privatesChat{
   padding: 15px;
   border-bottom: 1px solid #d9dbd4;
@@ -69,21 +81,25 @@ body{
   overflow-y: scroll;
   height: 500px;
 }
-::-webkit-scrollbar {
-    display: none;
-}
 .containChat p{
   padding: 10px;
   border-radius: 10%;
+  min-width: 15%;
   max-width:75%;
   display:flex;
+  position: relative;
 }
 .containChat p:first-of-type{
   margin-top: 20px;
 }
 .conversation{
   width: 80%;
-  margin: 0 auto;
+  height: 100%;
+}
+.conversation p small{
+  position: absolute;
+  bottom: 10%;
+  right: 10%;
 }
 .sendbyCPU{
   background-color: white;
@@ -106,4 +122,5 @@ body{
 }
 .userKeyboard i{
   font-size: 25px;
+  cursor: pointer;
 }
